--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
-h1 {
+h1,h2,h3,h4 {
     color: blue;
+}.box h1,h2,h3,h4 {
+    width: 200px;
+    height: 100px;
+    padding: 20px;
+    border: 2px solid black;
+    margin: 50px;
+    background:pink;
 }
